fixed the button misalignment on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,8 @@ body {
 }
 
 .search-btn:hover {
-  color: #ff2625 !important;
-  border: 1px solid #ff2625 !important;
+  color: #ff2625;
+  border: 1px solid #ff2625;
 }
 
 .exercise-video {
